syntax = "proto3";

package lokanos.device_registry;

import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";

message DeviceId {
  string value = 1;
}

message Device {
  string id = 1;
  string room_id = 2;
  repeated string capabilities = 3;
  google.protobuf.Struct state = 4;
}

message DeviceList {
  repeated Device devices = 1;
}

message UpdateDeviceStateRequest {
  string device_id = 1;
  google.protobuf.Struct state = 2;
}

message DeviceStateEvent {
  string device_id = 1;
  google.protobuf.Struct state = 2;
}

service DeviceRegistryService {
  rpc ListDevices(google.protobuf.Empty) returns (DeviceList);
  rpc GetDevice(DeviceId) returns (Device);
  rpc CreateDevice(Device) returns (Device);
  rpc UpdateDevice(Device) returns (Device);
  rpc DeleteDevice(DeviceId) returns (google.protobuf.Empty);
  rpc UpdateDeviceState(UpdateDeviceStateRequest) returns (DeviceStateEvent);
  rpc SubscribeDeviceStates(google.protobuf.Empty) returns (stream DeviceStateEvent);
}
